alignment issue fic

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,6 @@ label {
     margin-bottom: .5rem;
     margin-left: 5px;
 }
+label.col-sm-12.label-control {
+    margin-left: 19px;
+}
